crates/biome_cli/tests/snapshots/main_cases_overrides_linter/does_preserve_group_recommended_when_override_global_recommened.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: content
---
## `biome.json`

```json
{
  "linter": {
    "rules": {
      "suspicious": {
        "recommended": false
      }
    }
  },
  "overrides": [
    {
      "include": ["test.js"],
      "linter": {
        "rules": {
          "recommended": true
        }
      }
    }
  ]
}
```

## `test.js`

```js
debugger
```

## `test2.js`

```js
debugger
```

# Emitted Messages

```block
internalError/fs  DEPRECATED  ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  ! The argument --apply-unsafe is deprecated, it will be removed in the next major release. Use --write --unsafe instead.
  

```

```block
Checked 3 files in <TIME>. No fixes were applied.
```
