crates/biome_cli/tests/snapshots/main_cases_overrides_linter/does_preserve_individually_disabled_rules_in_overrides.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint --write --unsafe .
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "suspicious": {
        "noDebugger": "off"
      }
    }
  },
  "overrides": [
    {
      "includes": ["test.js"],
      "linter": {
        "rules": {
          "suspicious": {}
        }
      }
    }
  ]
}
```

## `test.js`

```js
debugger;

```

## `test2.js`

```js
debugger;

```

# Emitted Messages

```block
Checked 3 files in <TIME>. No fixes applied.
```
