crates/biome_cli/tests/snapshots/main_cases_overrides_linter/takes_last_linter_enabled_into_account.snap
---
source: crates/biome_cli/tests/snap_test.rs
expression: redactor(content)
---
## Command

```shell
biome lint .
```

## `biome.json`

```json
{
  "linter": {
    "rules": {
      "correctness": {
        "noUndeclaredVariables": "error"
      }
    }
  },
  "overrides": [
    {
      "includes": ["*.js"],
      "linter": { "enabled": false }
    },
    {
      "includes": ["*.js"],
      "linter": { "enabled": true }
    }
  ]
}
```

## `test.js`

```js
export { GLOBAL_VAR };
```

# Termination Message

```block
lint ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × Some errors were emitted while running checks.
  


```

# Emitted Messages

```block
test.js:1:10 lint/correctness/noUndeclaredVariables ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━

  × The GLOBAL_VAR variable is undeclared.
  
  > 1 │ export { GLOBAL_VAR };
      │          ^^^^^^^^^^
  
  i By default, Biome recognizes browser and Node.js globals.
    You can ignore more globals using the javascript.globals configuration.
  

```

```block
Checked 2 files in <TIME>. No fixes applied.
Found 1 error.
```
